re PR fortran/17676 (Problem with user operator)

PR fortran/17676
* resolve.c (resolve_operator): Use correct operator name in message.

From-SVN: r88726